src-rs/oneil_snapshot_tests/src/snapshots/oneil_snapshot_tests__test__basic_failing_test.snap
---
source: src-rs/oneil_snapshot_tests/src/test.rs
assertion_line: 45
expression: output
---
Model: fixtures/basic/failing_test.on
Tests: 0/1
  test 1: FAIL
Parameters:
  m = MeasuredNumber(MeasuredNumber { normalized_value: NormalizedNumber(Scalar(5.0)), unit: Unit { dimension_map: DimensionMap({Mass: 1.0}), magnitude: 1.0, is_db: false, display_unit: Unit { name: "kg", exponent: 1.0 } } })
  a = MeasuredNumber(MeasuredNumber { normalized_value: NormalizedNumber(Scalar(9.81)), unit: Unit { dimension_map: DimensionMap({Distance: 1.0, Time: -2.0}), magnitude: 1.0, is_db: false, display_unit: Divide(Unit { name: "m", exponent: 1.0 }, Unit { name: "s", exponent: 2.0 }) } })
  f = MeasuredNumber(MeasuredNumber { normalized_value: NormalizedNumber(Scalar(49.050000000000004)), unit: Unit { dimension_map: DimensionMap({Mass: 1.0, Distance: 1.0, Time: -2.0}), magnitude: 1.0, is_db: false, display_unit: Unit { name: "N", exponent: 1.0 } } })
  t = MeasuredNumber(MeasuredNumber { normalized_value: NormalizedNumber(Scalar(100.0)), unit: Unit { dimension_map: DimensionMap({Mass: 1.0, Distance: 1.0, Time: -2.0}), magnitude: 1.0, is_db: false, display_unit: Unit { name: "N", exponent: 1.0 } } })
