src-rs/oneil_snapshot_tests/src/snapshots/oneil_snapshot_tests__test__basic_model_snapshot.snap
---
source: src-rs/oneil_snapshot_tests/src/test.rs
expression: output
---
Model: fixtures/basic.on
Tests: 1/1
  test 1: PASS
Parameters:
  x = MeasuredNumber(MeasuredNumber { normalized_value: NormalizedNumber(Scalar(1.0)), unit: Unit { dimension_map: DimensionMap({Distance: 1.0}), magnitude: 1.0, is_db: false, display_unit: Unit { name: "m", exponent: 1.0 } } })
  y = MeasuredNumber(MeasuredNumber { normalized_value: NormalizedNumber(Scalar(2.0)), unit: Unit { dimension_map: DimensionMap({Distance: 1.0}), magnitude: 1.0, is_db: false, display_unit: Unit { name: "m", exponent: 1.0 } } })
