src-rs/oneil_snapshot_tests/src/snapshots/oneil_snapshot_tests__test__chain_apply_unit_mismatch.snap
---
source: src-rs/oneil_snapshot_tests/src/test.rs
expression: "run_fixture(\"chain_apply_unit_mismatch/parent.on\")"
---
error: applied design `bad.one` produced invalid contributions
  at fixtures/chain_apply_unit_mismatch/mid.on:7:7

error: unit mismatch: parameter `lng` declared as `m` but design applies value with unit `s`
  at fixtures/chain_apply_unit_mismatch/bad.one:8:1

error: submodel `m` has errors
  at fixtures/chain_apply_unit_mismatch/parent.on:14:10
