src-rs/oneil_snapshot_tests/src/snapshots/oneil_snapshot_tests__test__design_augmented_override.snap
---
source: src-rs/oneil_snapshot_tests/src/test.rs
assertion_line: 208
expression: output
---
Model: fixtures/augmented_refs/parent.on
Tests: 0/0
Parameters:
  x = Number(Scalar(50.0))
  y = Number(Scalar(100.0))
  z = Number(Scalar(42.0))
  total = Number(Scalar(192.0))
