src-rs/oneil_snapshot_tests/src/snapshots/oneil_snapshot_tests__test__design_augmented_reference_params.snap
---
source: src-rs/oneil_snapshot_tests/src/test.rs
assertion_line: 195
expression: output
---
Model: fixtures/augmented_refs/parent.on
Tests: 0/0
Parameters:
  x = Number(Scalar(10.0))
  y = Number(Scalar(20.0))
  z = Number(Scalar(42.0))
  total = Number(Scalar(72.0))
